feature: paginate chat message history with cursor-based scroll: polish